--- a/public/assets/sass/style.css
+++ b/public/assets/sass/style.css
@@ -1,123 +1,3 @@
-/*------------------------------------------------------------------------
-
-Template Name:  Noxiy - Insurance Company HTML Template
-Author:  ThemeOri
-Author URI: http://ThemeOri.com
-Version: 1.0.0
-Description: This Template is created for web template
-
---------------------------------------------------------------------------
-TABLE OF CONTENTS
---------------------------------------------------------------------------
-* Google Fonts
-* Common CSS
-* Form CSS
-* Hedging  CSS
-* Button And Title Styles CSS
-* Scroll Top CSS
-* Preloader CSS
-* Color & Font CSS
-* Video Animation CSS
-* Shape & Image Animation CSS
-* Icon Animation CSS
-* Image Overlay Animation CSS
-* Shape & Text Slider CSS
-* Space And Container CSS
-* Top Bar CSS
-* Top Bar Two CSS
-* Top Bar Three CSS
-* Top Bar Four CSS
-* Menu Bar CSS
-* Menu Bar Sticky CSS
-* Menu Sidebar CSS
-* Responsive Main Menu Css
-* Responsive Menu Sidebar CSS
-* Menu Demo CSS
-* Banner One CSS
-* Banner Two CSS
-* Banner Three CSS
-* Banner Four CSS
-* Features One CSS
-* Features Two CSS
-* About One CSS
-* About Two CSS
-* About Three CSS
-* About Four CSS
-* Services One CSS
-* Services Two CSS
-* Services Three CSS
-* Services Four CSS
-* Services Details CSS
-* Counter CSS
-* Counter Two CSS
-* Benefits CSS
-* Benefits Two CSS
-* Quote Area CSS
-* Work Area CSS
-* Offer Area CSS
-* Solution CSS
-* Request Quote CSS
-* Request Quote Two CSS
-* Portfolio One CSS
-* Portfolio Two CSS
-* Portfolio Three CSS
-* Portfolio Four CSS
-* Noxiy Filter CSS
-* Project Filter CSS
-* Project Single CSS
-* Video Area CSS
-* Cta One CSS
-* Cta Two CSS
-* Cta Three CSS
-* Team One CSS
-* Team Two CSS
-* Team Three CSS
-* Team Four CSS
-* Team Five CSS
-* Team Six CSS
-* Team Single CSS
-* Testimonial One CSS
-* Testimonial Two CSS
-* Testimonial Page CSS
-* FAQ One CSS
-* FAQ Area CSS
-* Pricing One Css
-* Pricing Two CSS
-* Blog One CSS
-* Blog Two CSS
-* Blog Three CSS
-* Blog Four CSS
-* Blog Standard CSS
-* Blog Single CSS
-* About Page CSS
-* About Company CSS
-* Services Page CSS
-* Noxiy Contact CSS
-* Contact One CSS
-* Contact Two CSS
-* Contact Three CSS
-* Text Slider CSS
-* Who We CSS
-* All Side Bar CSS
-* Post CSS
-* Theme Pagination CSS
-* Subscribe Area CSS
-* Subscribe Three CSS
-* Page Banner CSS
-* Error CSS
-* Footer Top Css
-* Footer Menu Css
-* Footer One CSS
-* Footer Two CSS
-* Footer Three CSS
-* Footer Four CSS
-* Copyright One CSS
-* Copyright Two CSS
-* Copyright Three CSS
-* Copyright Four CSS
-* Switch Tab CSS
-* Dark CSS
-* RTL CSS
 
 /*==========================================================================
 * Google Fonts
@@ -669,7 +549,7 @@ h6 {
   --border-white: #FFFFFF;
   --primary-color-1: #01BDB2;
   --primary-color-4: #ff0000;
-  --primary-color-2: #2974FF;
+  --primary-color-2: #E45F30;
   --primary-color-3: #0D9B4D;
   --bg-heading-color: #121212;
   --text-heading-color: #121212;
